@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-01T16:11:53Z",
-  "count" : 56,
-  "count_minmax" : [ 24, 56 ],
+  "timestamp" : "2022-05-15T08:11:53Z",
+  "count" : 7,
+  "count_minmax" : [ 7, 56 ],
   "count_prev_day_inc" : 65,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
