@@ -1,10 +1,10 @@
 {
-  "count": 322,
+  "count": 273,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-01T00:00:00Z",
-      "count": 56,
+      "count": 7,
       "uniques": 1
     },
     {
